Sat Jan 31 12:06:23 2015  Scott Francis  <scott.francis@shopify.com>

	* thread_pthread.c (reserve_stack): fix intermittent SIGBUS on
	  Linux, by reserving the stack virtual address space at process
	  start up so that it will not clash with the heap space.
	  [Fix GH-822]

Fri Jan 30 17:28:29 2015  gogotanaka  <mail@tanakakazuki.com>

	* math.c (num2dbl_with_to_f): make faster when Bignum passed by
	  direct conversion using rb_big2dbl().  [Feature #10800]

Thu Jan 29 23:30:00 2015  Kenta Murata  <mrkn@mrkn.jp>

	* ext/bigdecimal/bigdecimal.c (rb_rational_num): add fallback function
	  for rubies lower than 2.2.0.

	* ext/bigdecimal/bigdecimal.c (rb_rational_den): ditto.

	* ext/bigdecimal/extconf.rb: check the existences of struct RRational,
	  rb_rational_num, and rb_rational_den.

	* ext/bigdecimal/bigdecimal.bundle: bump version.

Thu Jan 29 20:28:25 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* tool/make-snapshot: removed md5 digest with package information

Thu Jan 29 10:41:52 2015  gogotanaka  <mail@tanakakazuki.com>

	* math.c (Get_Double): direct casting from Fixnum to double.
	  [Feature #10785]

Thu Jan 29 02:34:27 2015  Aaron Patterson <aaron@tenderlovemaking.com>

	* ext/psych/lib/psych/visitors/to_ruby.rb: fix parsing hashes with
	  instance variables when it is referenced multiple times.
	* ext/psych/lib/psych.rb: bump version
	* ext/psych/psych.gemspec: bump version
	* test/psych/test_hash.rb: test for fix

Thu Jan 29 02:06:09 2015  Eric Wong  <e@80x24.org>

	* thread.c (struct join_arg): restructure and make smaller
	  (thread_join_sleep): avoid timeofday() call if forever
	  (thread_join): pass join_arg.delay directly
	  (rb_thread_inspect_msg): remove, inline into rb_thread_inspect
	  (rb_thread_inspect): reduce branching and string creation
	* thread_pthread.c (native_set_thread_name): create string directly
	  to avoid reparsing. [Misc #10723]

Wed Jan 28 21:32:24 2015  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>
